5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2569.log
== TEST (2019-06-11 11:18:22) 
-- CODE:
from numpy import*
n = float(input("digite: "))

a = zeros(size(n), dtype=float)
for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:42:27) 
-- CODE:
from numpy import*
n = float(input("digite: "))

a = zeros(size(n), dtype=float)
for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:44:49) 
-- CODE:
from numpy import*
n = float(input("digite: "))

a = zeros(size(n), dtype=float)

for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:46:24) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))

a = zeros(size(n), dtype=float)

for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 5
    a = zeros(size(n), dtype=float)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:34) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))

a = zeros(size(n), dtype=float)

for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 5
    a = zeros(size(n), dtype=float)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:38) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))

a = zeros(size(n), dtype=float)

for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 5
    a = zeros(size(n), dtype=float)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:51) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
print(size(n))
a = zeros(size(n), dtype=float)

for i in range(size(n)):
	a[i] = (n[i]-(sum(n)/size(n)))**2
	
	d = (sum(a)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    print(size(n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:53:39) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))

for i in range(size(n)):
	m =(sum(n)/size(n))		 
	a[i] = (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 5
    for i in range(size(n)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:55:21) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
x = 0
for i in range(size(n)):
	m =(sum(n)/size(n))		 
	x = x + (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    x = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:55:43) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
x = 0
for i in range(size(n)):
	m =(sum(n)/size(n))		 
	x = x + (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    x = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:55:56) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
x = 0
			 
for i in range(size(n)):
	m =(sum(n)/size(n))		 
	x = x + (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    x = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:56:35) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
x = 0
m =(sum(n)/size(n))				 
for i in range(size(n)):
			 
	x = x + (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    x = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:57:01) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
x = 0
m =(sum(n)/size(n))				 
for i in range(size(n)):
			 
	x = x + (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    x = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:57:27) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))
q = 0
m =(sum(n)/size(n))				 
for i in range(size(n)):
			 
	q = q + (n[i]-m)**2
	d = (sum(n)/(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 4
    q = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:16:26) 
-- CODE:
from numpy import*

n = array(float(input("digite: "))

q = 0
			 
m =(sum(n)/size(n))				 
for i in range(size(n)):
			 
	q = q + (n[i]-m)**2
	d = q /(size(n)-1))**0.5
print(d)

-- ERROR:
File "XXXX", line 5
    q = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:25:36) 
-- CODE:
from numpy import*
n = array(eval(float(input("digite: "))))

a = 0
m =(sum(n)/size(n))

for i in range(size(n)):
			 
	a = a + (n[i]-m)**2
	d = (a /(size(n)-1))**0.5
print(round(d, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:27:13) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 0
m =(sum(n)/size(n))

for i in range(size(n)):
			 
	a = a + (n[i]-m)**2
	d = (a /(size(n)-1))**0.5
print(round(d, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 07:27:28) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 0
m =(sum(n)/size(n))

for i in range(size(n)):
			 
	a = a + (n[i]-m)**2
	d = (a /(size(n)-1))**0.5
print(round(d, 3))

-- EXECUTION TIME:
1.18708
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 08:58:48) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 0
m =(sum(n)/size(n))

for i in range(size(n)):
			 
	a = a + (n[i]-m)**2
	d = (a /(size(n)-1))**0.5
print(round(d, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
